--- a/Figure_legend/version1/Figure_legend.tex
+++ b/Figure_legend/version1/Figure_legend.tex
@@ -128,4 +128,10 @@
 \includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/atlas/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.pdf}
 \includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/Kraken2/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.pdf}
 
+\hypertarget{figure4-venny}{%
+\section{Figure4 Venny}\label{figure4-venny}}
+
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Venny/Atlas_wilcox_venny.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Venny/Kraken2_wilcox_venny.pdf}
+
 \end{document}
