--- a/Figure_legend/version1/Figure_legend.tex
+++ b/Figure_legend/version1/Figure_legend.tex
@@ -73,6 +73,8 @@
 
 \begin{document}
 
+\fontsize{18}{12}\selectfont
+
 \hypertarget{background}{%
 \section{Background}\label{background}}
 
@@ -142,16 +144,16 @@ functions.
 \hypertarget{roc}{%
 \subsubsection{ROC}\label{roc}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/atlas_binning/ERP012177_binning_best.model_draw_Roc_plot.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/krakens/ERP012177_best.model_draw_Roc_plot.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/atlas_binning/ERP012177_binning_best.model_draw_Roc_plot.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/krakens/ERP012177_best.model_draw_Roc_plot.png}
 
 图1:ERP012177 atlas binning. 图2: ERP012177 krakens
 
 \hypertarget{feature_importance}{%
 \subsubsection{Feature\_importance}\label{feature_importance}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/atlas_binning/ERP012177_binning_best.model_draw_feature_importance_plot.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/krakens/ERP012177_best.model_draw_feature_importance_plot.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/atlas_binning/ERP012177_binning_best.model_draw_feature_importance_plot.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/03_ML/shotgun/krakens/ERP012177_best.model_draw_feature_importance_plot.png}
 
 图1:ERP012177 atlas binning. 图2: ERP012177 krakens
 
@@ -161,14 +163,14 @@ functions.
 \hypertarget{roc-1}{%
 \subsubsection{ROC}\label{roc-1}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_Roc_plot.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/krakens/PRJDB4176_best.model_draw_Roc_plot.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_Roc_plot.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/krakens/PRJDB4176_best.model_draw_Roc_plot.png}
 
 \hypertarget{feature_importance-1}{%
 \subsubsection{Feature\_importance}\label{feature_importance-1}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_feature_importance_plot.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/krakens/PRJDB4176_best.model_draw_feature_importance_plot.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_feature_importance_plot.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/krakens/PRJDB4176_best.model_draw_feature_importance_plot.png}
 
 \hypertarget{figure3-wilcoxon}{%
 \section{Figure3 Wilcoxon}\label{figure3-wilcoxon}}
@@ -176,20 +178,20 @@ functions.
 \hypertarget{erp012177-1}{%
 \subsection{ERP012177}\label{erp012177-1}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/04_Wilcoxon/atlas/output/class_ERP012177_pvalue0.05case_control_metagenomics.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/04_Wilcoxon/Kraken2/output/class_ERP012177_pvalue0.05case_control_metagenomics.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/04_Wilcoxon/atlas/output/class_ERP012177_pvalue0.05case_control_metagenomics.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_ERP012177/04_Wilcoxon/Kraken2/output/class_ERP012177_pvalue0.05case_control_metagenomics.png}
 
 \hypertarget{prjdb4176-1}{%
 \subsection{PRJDB4176}\label{prjdb4176-1}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/atlas/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/Kraken2/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/atlas/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/Kraken2/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.png}
 
 \hypertarget{figure4-venny}{%
 \section{Figure4 Venny}\label{figure4-venny}}
 
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Venny/Atlas_wilcox_venny.pdf}
-\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Venny/Kraken2_wilcox_venny.pdf}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Venny/Atlas_wilcox_venny.png}
+\includegraphics[width=0.5\textwidth,height=0.5\textheight]{../../Venny/Kraken2_wilcox_venny.png}
 
 References:
 
