--- a/Figure_legend/version1/Figure_legend.Rmd
+++ b/Figure_legend/version1/Figure_legend.Rmd
@@ -19,6 +19,11 @@ header-includes:
 ```{r include=FALSE}
 library(magick)
 library(cowplot)
+image_add_labels=function(file.name=file.name,Label.size=30,label.context="A"){
+  IMAGE=image_read_pdf(file.name) %>% #image_read
+  image_annotate(label.context, size = Label.size, gravity = "northwest", color = "black")
+  image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+}
 ```
 
 
@@ -47,6 +52,7 @@ In summary, this study compared the microbiomes of two datasets through assembly
 
 # Figure2 ML
 
+
 ## ERP012177
 
 ### ROC
@@ -56,14 +62,10 @@ In summary, this study compared the microbiomes of two datasets through assembly
 
 ```{r include=FALSE}
 file.name="../../Analysis_shotgun_ERP012177/03_ML/shotgun/atlas_binning/ERP012177_binning_best.model_draw_Roc_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A")
 
 file.name="../../Analysis_shotgun_ERP012177/03_ML/shotgun/krakens/ERP012177_best.model_draw_Roc_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "B")
 
 ```
 
@@ -84,14 +86,10 @@ image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
 
 ```{r include=FALSE}
 file.name="../../Analysis_shotgun_ERP012177/03_ML/shotgun/atlas_binning/ERP012177_binning_best.model_draw_feature_importance_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A")
 
 file.name="../../Analysis_shotgun_ERP012177/03_ML/shotgun/krakens/ERP012177_best.model_draw_feature_importance_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "B")
 
 ```
 
@@ -112,15 +110,10 @@ image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
 ### ROC
 ```{r include=FALSE}
 file.name="../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_Roc_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A")
 
 file.name="../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/krakens/PRJDB4176_best.model_draw_Roc_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
-
+image_add_labels(file.name,label.context = "B")
 ```
 
 ![PRJDB4176 atlas binning](../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_Roc_plot.png){width=50% height=50%}
@@ -136,14 +129,10 @@ image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
 ### Feature_importance
 ```{r include=FALSE}
 file.name="../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/atlas_binning/PRJDB4176_binning_best.model_draw_feature_importance_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A")
 
 file.name="../../Analysis_shotgun_PRJDB4176/03_ML/shotgun/krakens/PRJDB4176_best.model_draw_feature_importance_plot.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "B")
 
 ```
 
@@ -162,14 +151,10 @@ image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
 
 ```{r include=FALSE}
 file.name="../../Analysis_shotgun_ERP012177/04_Wilcoxon/atlas/output/class_ERP012177_pvalue0.05case_control_metagenomics.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A")
 
 file.name="../../Analysis_shotgun_ERP012177/04_Wilcoxon/Kraken2/output/class_ERP012177_pvalue0.05case_control_metagenomics.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "B")
 
 ```
 
@@ -189,14 +174,10 @@ image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
 
 ```{r include=FALSE}
 file.name="../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/atlas/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A")
 
 file.name="../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/Kraken2/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "B")
 
 ```
 ![PRJDB4176 atlas binning](../../Analysis_shotgun_PRJDB4176/04_Wilcoxon/atlas/output/class_PRJDB4176_pvalue0.05Stage.III.IV._Healthy.control_metagenomics.png){width=50% height=50%}
@@ -212,14 +193,10 @@ image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
 # Figure4 Venny
 ```{r include=FALSE}
 file.name="../../Venny/Atlas_wilcox_venny.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "A", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "A",Label.size = 10)
 
 file.name="../../Venny/Kraken2_wilcox_venny.pdf"
-IMAGE=image_read_pdf(file.name) %>% #image_read
-image_annotate( "B", size = 30, gravity = "northwest", color = "black")
-image_write(IMAGE,format = "png",path = gsub("pdf","png",file.name) )
+image_add_labels(file.name,label.context = "B",Label.size = 10)
 
 ```
 
