--- a/Figure_legend/version1/Figure_legend.Rmd
+++ b/Figure_legend/version1/Figure_legend.Rmd
@@ -7,6 +7,7 @@ output:
     keep_tex: yes
     latex_engine: xelatex
     toc_depth: 4
+    number_sections: true
 header-includes:
 - \usepackage{fancyhdr}
 - \pagestyle{fancy}
